<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_background">

    <include layout="@layout/yhsdk_layout_title"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/et_register_username"
                    android:layout_width="@dimen/win_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="43dp"
                    android:hint="@string/username_register_account_hint"
                    android:gravity="center_vertical"
                    style="@style/EditTextStyle"/>


            <EditText
                    android:id="@+id/et_username_register_pwd"
                    android:layout_width="@dimen/win_width"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/username_password_hint"
                    android:layout_marginTop="26dp"
                    style="@style/EditTextStyle"/>

            <EditText
                    android:id="@+id/et_register_confirm_pwd"
                    android:layout_width="@dimen/win_width"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/username_pwd_confirm_hint"
                    android:layout_marginTop="26dp"
                    style="@style/EditTextStyle"
                    />

            <Button
                    android:id="@+id/btn_username_register"
                    android:layout_width="@dimen/win_width"
                    android:layout_height="35dp"
                    android:layout_marginTop="38dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/registered_immediately"
                    android:background="@drawable/yhsdk_btn_blue_bg"/>

            <RelativeLayout
                    android:layout_width="@dimen/win_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="23dp">

                <TextView
                        android:id="@+id/tv_phone_fast_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="#0099ff"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/phone_fast_register"/>

                <TextView
                        android:id="@+id/tv_username_register_treaty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="#676767"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/register_agreement_text"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>