<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/yhsdk_dialog_bg">

    <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_account"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textColor="#0099ff"
            />

    <EditText
            android:id="@+id/et_add_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="23dp"
            android:hint="@string/input_account_hint"
            style="@style/EditTextStyle"
            />

    <LinearLayout
            android:id="@+id/btn_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/tv_add_account_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#676767"
                android:background="@drawable/yhsdk_left_corners"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/tv_add_account_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/yhsdk_right_corners"
                android:textSize="15sp"
                android:text="@string/sure"/>
    </LinearLayout>

</LinearLayout>